app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  # in case you want to set up https
  tls:
  - hosts:
    - test.petchblog.net
    secretName: app-tls
  rules:
  # this is my personal domain
  # you can use your personal domain by adding A record of ingress-nginx-controller service's external ip
  # to find external ip, eun `kubectl -n ingress-nginx get service`
  - host: test.petchblog.net
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: app-service
              port:
                number: 80
