nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - test.local
    secretName: ingress-nginx-tls
  rules:
  - host: test.local
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginx-service
              port:
                number: 80
